--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: Momtserrat Regular;
+    font-family: Montserrat Regular;
     font-display: auto;
     src: local('Montserrat Regular'), url(./assets/fonts/Montserrat-Regular.woff2);
     font-style: normal;
 }
 @font-face {
-    font-family: Momtserrat Medium;
+    font-family: Montserrat Medium;
     font-display: auto;
     src: local('Montserrat Medium'), url(./assets/fonts/Montserrat-Medium.woff2);
     font-style: normal;
@@ -27,4 +27,83 @@
     font-display: auto;
     src: local('Montserrat Bold'), url(./assets/fonts/Montserrat-Bold.woff2);
     font-style: normal;
+}
+body {
+    margin: 0;
+    font-family: 'Montserrat Medium';
+}
+.primary-button {
+    background: #4985FF;
+    box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+    border-radius: 30px;
+    font-family: 'Montserrat Medium';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #FFFFFF;
+    border: none;
+    padding: 14px 36px;
+}
+.container {
+    width: 75%;
+    margin: 0 auto;
+}
+h1 {
+    font-size: 48px;
+    line-height: 64px;
+    text-align: center;
+    color: #FFFFFF;
+}
+h3 {
+    font-family: 'Montserrat Regular';
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #FFFFFF;
+    margin: 0;
+}
+nav.navbar {
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    width: 100%;
+    border-bottom: 1px solid #A1A1A1;
+}
+.navbar.container {
+    display: flex;
+    width: 50%;
+    justify-content: flex-end;
+}
+div.navbar-item {
+    padding: 40px 0;
+    margin: 0 20px;
+}
+div.navbar-item:hover {
+    outline: 2px solid #FFFFFF;
+}
+.navbar-item a {
+    font-size: 16px;
+    font-family: 'Montserrat Regular';
+    line-height: 20px;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.home-section {
+    background-image: url(./assets/img/home-section-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto 100%;
+    height: 100vh;
+}
+
+.home-section-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.home-section-content h1 {
+    margin: 30px 0 50px;
 }
