--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ div.navbar-item {
     margin: 0 20px;
 }
 div.navbar-item:hover {
-    outline: 2px solid #FFFFFF;
+    border-bottom: 2px solid #FFFFFF;
 }
 .navbar-item a {
     font-size: 16px;
