added width for h1

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ h1 {
     line-height: 64px;
     text-align: center;
     color: #FFFFFF;
+    width: 70%;
 }
 h3 {
     font-family: 'Montserrat Regular';
