--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ div.navbar-item:hover {
     background-image: url(./assets/img/home-section-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: auto 100%;
+    background-size: cover;
     height: 100vh;
 }
 .home-section-content {
@@ -236,4 +236,60 @@ section.standarts {
     font-size: 36px;
     line-height: 53px;
     margin: 0;
+}
+.our-works {
+    background: linear-gradient(#504DC2 50%, white 50%);
+    padding: 100px 0 85px;
+}
+.our-works-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.our-works-title h2,
+.our-works-title-button {
+    flex: 1;
+}
+.our-works-title-button {
+    text-align: end;
+    vertical-align: center;
+}
+.our-works-title h2 {
+    font-size: 36px;
+    line-height: 53px;
+    color: #FFFFFF;
+    font-family: Montserrat Regular;
+    margin: 0;
+}
+.our-works-content {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 70px;
+    padding-bottom: 85px;
+    border-bottom: 1px solid #E0E0E0;
+}
+.our-works-item {
+    width: 31%;
+}
+.our-works-item img {
+    width: 100%;
+}
+.our-works-item h5 {
+    font-family: Motserrat Bold;
+    font-size: 18px;
+    line-height: 22px;
+}
+.our-works-item h5 span {
+    color: #4985FF;
+}
+.our-works-item p {
+    font-size: 16px;
+    line-height: 25px;
+    color: #999999;
+}
+.our-works-item a {
+    font-size: 16px;
+    line-height: 20px;
+    text-decoration-line: underline;
+    color: #4985FF;
 }
