--- a/style.css
+++ b/style.css
@@ -293,3 +293,68 @@ section.standarts {
     text-decoration-line: underline;
     color: #4985FF;
 }
+.subscription-section {
+    text-align: center;
+    padding: 85px 0;
+}
+.subscription-section h3 {
+    font-family: 'Montserrat Bold';
+    font-size: 18px;
+    line-height: 22px;
+    margin: 0;
+    color: black;
+}
+.subscription-section p {
+    font-size: 16px;
+    line-height: 25px;
+    text-align: center;
+    color: #999999;
+    margin: 20px 0 30px;
+}
+.subscription-section span {
+    font-size: 13px;
+    line-height: 21px;
+    text-align: center;
+    color: #999999;
+}
+.subscription-section .subscribe-block {
+    display: flex;
+    justify-content: center;
+    width: 490px;
+    margin: 0 auto 35px;
+}
+.subscribe-block input {
+    border-radius: 30px 0 0 30px;
+    flex: 2;
+    border: 1px solid #F2F2F2;
+    box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+    border-right: none;
+    padding: 14px 0 14px 33px;
+}
+.subscribe-block input::placeholder {
+    font-size: 13px;
+    line-height: 21px;
+    color: #999999;
+}
+.subscribe-block input:focus {
+    outline: 0;
+} 
+.subscribe-block .primary-button {
+    border-radius: 0 30px 30px 0;
+    flex: 1;
+    font-size: 16px;
+    border-left: none;
+    box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+}
+.subscribe-block .primary-button:focus {
+    outline: 0;
+}
+@media (max-width: 800px) {
+    .our-works-title {
+        flex-direction: column;
+        text-align: center;
+    }
+    .our-works-title-button {
+        margin-top: 30px;
+    }
+}
