--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@
     font-style: normal;
 }
 @font-face {
-    font-family: Momtserrat ExtraBold;
+    font-family: Montserrat ExtraBold;
     font-display: auto;
     src: local('Montserrat ExtraBold'), url(./assets/fonts/Montserrat-ExtraBold.woff2);
     font-style: normal;
 }
 @font-face {
-    font-family: Momtserrat Bold;
+    font-family: Montserrat Bold;
     font-display: auto;
     src: local('Montserrat Bold'), url(./assets/fonts/Montserrat-Bold.woff2);
     font-style: normal;
@@ -357,10 +357,13 @@ p.play-text {
     color: #FFFFFF;
     margin-left: 21px;
 }
-
 .subscription-section {
     text-align: center;
-    padding: 85px 0;
+    padding: 155px 0 85px;
+}
+.subscription-section.container {
+    border-top: 1px solid #E0E0E0;
+    padding: 85px 0 0;
 }
 .subscription-section h3 {
     font-family: 'Montserrat Bold';
@@ -400,6 +403,7 @@ p.play-text {
     font-size: 13px;
     line-height: 21px;
     color: #999999;
+    font-family: 'Montserrat Regular';
 }
 .subscribe-block input:focus {
     outline: 0;
@@ -414,6 +418,66 @@ p.play-text {
 .subscribe-block .primary-button:focus {
     outline: 0;
 }
+footer {
+    background: #F6F6F8;
+}
+footer div.container {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #E0E0E0;
+    padding-top: 70px;
+    padding-bottom: 40px;
+}
+footer p {
+    margin: 0;
+}
+p.contacts-header,
+p.links-header,
+p.projects-header,
+p.social-networks-header {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000000;
+    margin-bottom: 5px;
+}
+div.contacts-item,
+div.links-item,
+div.projects-item,
+div.social-networks-item {
+    margin: 30px 0;
+}
+footer a {
+    margin-left: 13px;
+    font-size: 14px;
+    line-height: 22px;
+    color: #999999;
+    text-decoration: none;
+}
+.contacts-item {
+    display: flex;
+    align-items: center;
+}
+.contacts-item p{
+    margin: 0 0 0 13px;
+    font-size: 14px;
+    line-height: 22px;
+    color: #999999;
+}
+.rights {
+    text-align: center;
+    padding: 30px 0;
+}
+.rights-text {
+    font-size: 13px;
+    line-height: 21px;
+    text-align: center;
+    color: #999999;
+}
+
+
+
+
 @media (max-width: 800px) {
     .our-works-title {
         flex-direction: column;
